--- a/PhantasmaMail/PhantasmaMail/App.xaml
+++ b/PhantasmaMail/PhantasmaMail/App.xaml
@@ -23,6 +23,7 @@
             <Color x:Key="GradientEndColor">#3FC0C0C0</Color>
 
             <x:String x:Key="TintIconColor">#A1ACB3</x:String>
+            <x:String x:Key="TintWhiteIconColor">#FFFFFF</x:String>
             <x:String x:Key="TintUpArrowColor">#7ED321</x:String>
             <x:String x:Key="TintDownArrowColor">#D0021B</x:String>
 
