DraftMessageCell DraftMissingFieldsConverter Some localization New db object model: DraftMessage DraftView now has the drafts messages Navigation between Compose and Draft/Inbox views fixed

--- a/PhantasmaMail/PhantasmaMail/App.xaml
+++ b/PhantasmaMail/PhantasmaMail/App.xaml
@@ -41,6 +41,7 @@
             <converters:ValueToColorConverter x:Key="ValueToColorConverter"/>
             <converters:AssetValueChangeToIconConverter x:Key="AssetValueChangeToIconConverter"/>
             <converters:UtcToLocalTimeConverter x:Key="UtcToLocalTimeConverter"/>
+            <converters:DraftMissingFieldsConverter x:Key="DraftMissingFieldsConverter"/>
 
             <!-- FONTS -->
 
