--- a/PhantasmaMail/PhantasmaMail/Controls/DraftMessageCell.xaml
+++ b/PhantasmaMail/PhantasmaMail/Controls/DraftMessageCell.xaml
@@ -1,13 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
 <Grid
-    x:Class="PhantasmaMail.Controls.InboxMessageCell"
     xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:effects="clr-namespace:PhantasmaMail.Effects"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:controls="clr-namespace:PhantasmaMail.Controls;assembly=PhantasmaMail"
-    x:Key="InboxMessageCell"
-    x:Name="customFrame">
+    xmlns:effects="clr-namespace:PhantasmaMail.Effects;assembly=PhantasmaMail"
+    x:Key="DraftMessageCell"
+    x:Class="PhantasmaMail.Controls.DraftMessageCell">
     <controls:CustomFrame Margin="20,10" CornerRadius="0" HasShadow="True">
         <Grid RowSpacing="7" ColumnSpacing="0">
             <Grid.RowDefinitions>
@@ -24,12 +23,12 @@
 
             <Label Grid.Row="0"
                Grid.Column="0"
-               Text="{Binding Subject}"
+               Text="{Binding Subject, Converter={StaticResource DraftMissingFieldsConverter}, ConverterParameter='1'}"
                Style="{StaticResource MessageTitleStyle}" />
 
             <Label Grid.Row="0"
                Grid.Column="1"
-               Text="{Binding Date, StringFormat='{0:dd/MM/yyyy}', Converter={StaticResource UtcToLocalTimeConverter}}"
+               Text="{Binding Date, StringFormat='{0:HH:mm}', Converter={StaticResource UtcToLocalTimeConverter}}"
                HorizontalOptions="End"
                Style="{StaticResource MessageTextStyle}"
                FontSize="{StaticResource LittleSize}" />
@@ -37,7 +36,7 @@
             <Label Grid.Row="1"
                Grid.Column="0"
                Grid.ColumnSpan="2"
-               Text="{Binding TextContent}"
+               Text="{Binding TextContent, Converter={StaticResource DraftMissingFieldsConverter}, ConverterParameter='2'}"
                Style="{StaticResource MessageTextStyle}">
                 <Label.Effects>
                     <effects:MaxLinesEffect MaxLines="2" />
@@ -53,7 +52,7 @@
                x:Name="BoxNameLabel"
                Grid.Column="0"
                Grid.ColumnSpan="2"
-               Text="{Binding FromInbox}"
+               Text="{Binding ToInbox, Converter={StaticResource DraftMissingFieldsConverter}, ConverterParameter='3'}"
                VerticalTextAlignment="Center"
                HorizontalOptions="EndAndExpand"
                HorizontalTextAlignment="Start"
